feat: add endpoints to enable and disable servers
